--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-﻿arabic-reshaper==2.1.3
-asgiref==3.5.0
+﻿xhtml2pdf==0.2.5
 awsebcli==3.20.3
 botocore==1.23.54
 Brotli==1.0.9
@@ -30,9 +29,11 @@ pycparser==2.21
 pydyf==0.1.2
 PyPDF2==1.26.0
 pyphen==0.12.0
+pypiwin32==223
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python-decouple==3.6
+pywin32==303
 PyYAML==5.4.1
 reportlab==3.6.6
 requests==2.26.0
@@ -48,8 +49,5 @@ wcwidth==0.1.9
 weasyprint==54.1
 webencodings==0.5.1
 whitenoise==5.3.0
-xhtml2pdf==0.2.5
 yarg==0.1.9
 zopfli==0.1.9
-tk==0.1.0
-Pillow >= 7
